@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-5098959545fae1d2f1757a79e637ec8aea1b0091  15835 ChangeLog
+2a39ed3fdec1f2fbfef08716e16f267dbb8298d4  15910 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 7103c2ecddea29134185e30fbf7ba2daf3f11c08  10264 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -21,23 +21,23 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-d72666ae9ce5c16c12e70f079c151707d207c83c  10426 src/config.h
+c292290bb9cb590cbe187c45c613e19605252493  11011 src/config.h
 1dfd073a2b86837f93b5311042a93c68b889d065 163840 src/evilvte.c
 165ba6dfab07c1c824277184f97383e26fa7799a  15631 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk+7ksUACgkQdEpXpumNYVkKngCfSg0LJMtNlhPQi7r5Gpg3Jafu
-pfQAmgLc8uY8RirezACq24U0udfzk0pqiQIcBAEBCgAGBQJPu5LFAAoJELc3H0m+
-i6gZwoUP/0MA6f099w5e90z1VjACdg4y53Qk85R0cLWhAKOKA4xhw+XCmSB+aC5p
-cUFpYASWfZx8IO5vllDNduNLS+mmsCNTKL5pqiGTBhC5w36sXnd3mVq/QvjC/Ixt
-DT1rgyyQ5WH9Xp9AZui/K10lNA+9js9hnQFprSFaEHrjF5b9NFKbJhSxeaILnEvH
-8W1shynaNg6QV729bWreKQeaiZLDWVu/j0Ynbat0wAsGprY/LIusW3V1+u9yxJuR
-EXZvkXNi5O/JfBii4qHw/ZBRAMuO69xvcvYqEOaj7yixPk/9Ky+HSPy1WK7RR0xE
-LycXHrEwf8Rr/Y6ijUVINK2+B33kGBzcaIFlictUDWglQEA54bkIXaoaDf5LWyqL
-bLKNJUOv7KHCcE6VjeqHC8/SZ1mQ58mrAsVnKNjVtRTInnvWYpKenYSlJJ3D7qZ/
-tWKzHnngRl0hAHGIQiHGEB9DeVreU5UvQfd/r6L3ZAGtQz0b7bVs9kKw0olyllXr
-wysz2oYdOZiCTlC70Ohj2cTOPoUKFl/4MNH0/XpzaPWGXKh3XNYUYwV434TBTNiA
-VAonAzJgSJKjuVxdBUJfxm6dl2SUqG34S76IR93Eun2XBVW6+eLf+ddYYy8BPxoV
-HDrgtiLjDC7NtmaTaUj/bn/5fyAb0utN8c7GxI2smPGQNa0ILj5O
-=n+q0
+iEYEARECAAYFAk+8X48ACgkQdEpXpumNYVmDxwCbBojxBDcXKjUfnRh1Uor5pqFq
+b9kAn3RiIebX+uASbBRQ5ldN2A3wybGGiQIcBAEBCgAGBQJPvF+PAAoJELc3H0m+
+i6gZt3UQAIsVplYuQwA7AISRbCelrqAsCLzRxEYEiSEjA8kvRXFxVQGUmpTgP8mq
+hhmC67gRCRJuwfDSewo+L9aNJxNR/puVbNezFYWD7bux7FTAEOn3uAZkOVB97/te
+X5hDV4x7pnPs70mGFwJwslneR/smqkwCZTMvosTylMbAHxirS56U3kxsAJ+1i5na
+iHSbRdNHPCin/I2cfmt42BZwjdZV3dnJRKENnCqQuLjOKHsW391piJ5Eh4+YF9Wl
+7N0AwkaysiBaE7O3qJ3aOLzEIBq+1fG2xZ5LnkpZiy3WL0VFZYl1aAOnsm8YzCBl
+HsyepLegEIIkg7AZL9WJusu2IdDxlzc1H3LeEH84lIkNGpTBqdkFUgUk1dDtHwqA
+lrGkheEyqpR8E6fx8cNXVftYyjbv6V7UJdigKMo/N7kKg6fUnVbHSNDrHb/icI/V
+dz2HjClmnzjdWwszEUqQmlnUW5UXMSEP+AEA/NBGGiruAByY5Yvdlj8FSFEHy0Ep
+fwBKpadUVgQBuHWd55seZuYYg2AO7hwy9gOu/7bQv79kETpvifUiTgbdbaJflG6T
+2K2hWWdhR8bV5/VU4XG1+ZvS+lFI4AtMT7XBBmV7rbwmkLndEjVREj1suOTc3p+B
+AULlyO/l5XEis7t/VHtBACTh4md9XvGBjWGjaMCYxYvByZKZe0o8
+=/ecN
 -----END PGP SIGNATURE-----
