@@ -125,43 +125,43 @@
  * See /usr/include/gtk-?.0/gdk/gdkkeysyms.h for GDK_* definitions.           */
 
 #define    HOTKEY                       TRUE
-// #define HOTKEY_COPY                  CTRL(GDK_C)
-// #define HOTKEY_PASTE                 CTRL(GDK_V)
-// #define HOTKEY_SELECT_ALL            CTRL(GDK_S)
-// #define HOTKEY_COLOR_BACKGROUND      CTRL(GDK_B)
-// #define HOTKEY_EDIT_ENCODING         CTRL(GDK_U)
+// #define HOTKEY_COPY                  CTRL_SHIFT(GDK_C) || CTRL_SHIFT(GDK_c)
+// #define HOTKEY_PASTE                 CTRL_SHIFT(GDK_V) || CTRL_SHIFT(GDK_v)
+// #define HOTKEY_SELECT_ALL            CTRL_SHIFT(GDK_S) || CTRL_SHIFT(GDK_s)
+// #define HOTKEY_COLOR_BACKGROUND      CTRL_SHIFT(GDK_B) || CTRL_SHIFT(GDK_b)
+// #define HOTKEY_EDIT_ENCODING         CTRL_SHIFT(GDK_U) || CTRL_SHIFT(GDK_u)
 // #define HOTKEY_FONT_BIGGER           CTRL(GDK_KP_Add)
 // #define HOTKEY_FONT_SMALLER          CTRL(GDK_KP_Subtract)
 // #define HOTKEY_FONT_DEFAULT_SIZE     CTRL(GDK_KP_Insert)
-// #define HOTKEY_FONT_SELECT           CTRL(GDK_F)
-// #define HOTKEY_MIMIC_SCROLL_UP       CTRL(GDK_K)
-// #define HOTKEY_MIMIC_SCROLL_DOWN     CTRL(GDK_J)
-// #define HOTKEY_OPEN_NEW_WINDOW       CTRL(GDK_N)
-// #define HOTKEY_RESET_TERMINAL        CTRL(GDK_R)
-// #define HOTKEY_RESET_AND_CLEAR       CTRL(GDK_A)
-// #define HOTKEY_SATURATION_DIALOG     CTRL(GDK_X)
+// #define HOTKEY_FONT_SELECT           CTRL_SHIFT(GDK_F) || CTRL_SHIFT(GDK_f)
+// #define HOTKEY_MIMIC_SCROLL_UP       CTRL_SHIFT(GDK_K) || CTRL_SHIFT(GDK_k)
+// #define HOTKEY_MIMIC_SCROLL_DOWN     CTRL_SHIFT(GDK_J) || CTRL_SHIFT(GDK_j)
+// #define HOTKEY_OPEN_NEW_WINDOW       CTRL_SHIFT(GDK_N) || CTRL_SHIFT(GDK_n)
+// #define HOTKEY_RESET_TERMINAL        CTRL_SHIFT(GDK_R) || CTRL_SHIFT(GDK_r)
+// #define HOTKEY_RESET_AND_CLEAR       CTRL_SHIFT(GDK_A) || CTRL_SHIFT(GDK_a)
+// #define HOTKEY_SATURATION_DIALOG     CTRL_SHIFT(GDK_X) || CTRL_SHIFT(GDK_x)
 // #define HOTKEY_SATURATION_MORE       CTRL(GDK_KP_Multiply)
 // #define HOTKEY_SATURATION_LESS       CTRL(GDK_KP_Divide)
-// #define HOTKEY_SCROLL_ONE_PAGE_UP    CTRL(GDK_k)
-// #define HOTKEY_SCROLL_ONE_PAGE_DOWN  CTRL(GDK_j)
-// #define HOTKEY_SEARCH_STRING         CTRL(GDK_Q)
-// #define HOTKEY_SEARCH_PREVIOUS       CTRL(GDK_G)
-// #define HOTKEY_SEARCH_NEXT           CTRL(GDK_g)
+// #define HOTKEY_SCROLL_ONE_PAGE_UP    CTRL(GDK_k) || CTRL(GDK_K)
+// #define HOTKEY_SCROLL_ONE_PAGE_DOWN  CTRL(GDK_j) || CTRL(GDK_J)
+// #define HOTKEY_SEARCH_STRING         CTRL_SHIFT(GDK_Q) || CTRL_SHIFT(GDK_q)
+// #define HOTKEY_SEARCH_PREVIOUS       CTRL_SHIFT(GDK_G) || CTRL_SHIFT(GDK_g)
+// #define HOTKEY_SEARCH_NEXT           CTRL(GDK_g) || CTRL(GDK_G)
 // #define        SEARCH_CASE_SENSITIVE TRUE
-#define    HOTKEY_TAB_ADD               CTRL(GDK_T)
-#define    HOTKEY_TAB_REMOVE            CTRL(GDK_W)
+#define    HOTKEY_TAB_ADD               CTRL_SHIFT(GDK_T) || CTRL_SHIFT(GDK_t)
+#define    HOTKEY_TAB_REMOVE            CTRL_SHIFT(GDK_W) || CTRL_SHIFT(GDK_w)
 #define    HOTKEY_TAB_PREVIOUS          CTRL(GDK_Page_Up)
 #define    HOTKEY_TAB_NEXT              CTRL(GDK_Page_Down)
 // #define HOTKEY_TAB_FIRST             CTRL(GDK_Home)
 // #define HOTKEY_TAB_LAST              CTRL(GDK_End)
 // #define ALT_NUMBER_GO_TO_TAB_NUMBER  TRUE
 // #define CTRL_NUMBER_GO_TO_TAB_NUMBER TRUE
-// #define HOTKEY_TAB_EDIT_LABEL        CTRL(GDK_E)
-// #define HOTKEY_TOGGLE_ANTI_ALIAS     CTRL(GDK_L)
+// #define HOTKEY_TAB_EDIT_LABEL        CTRL_SHIFT(GDK_E) || CTRL_SHIFT(GDK_e)
+// #define HOTKEY_TOGGLE_ANTI_ALIAS     CTRL_SHIFT(GDK_L) || CTRL_SHIFT(GDK_l)
 // #define HOTKEY_TOGGLE_DECORATED      CTRL(GDK_Left)
-// #define HOTKEY_TOGGLE_FULLSCREEN     CTRL(GDK_M)
+// #define HOTKEY_TOGGLE_FULLSCREEN     CTRL_SHIFT(GDK_M) || CTRL_SHIFT(GDK_m)
 // #define HOTKEY_TOGGLE_HOTKEYS        CTRL(GDK_quoteleft)
-// #define HOTKEY_TOGGLE_ON_TOP         CTRL(GDK_O)
+// #define HOTKEY_TOGGLE_ON_TOP         CTRL_SHIFT(GDK_O) || CTRL_SHIFT(GDK_o)
 // #define HOTKEY_TOGGLE_SCROLLBAR      CTRL(GDK_Right)
 // #define HOTKEY_TOGGLE_STATUS_BAR     CTRL(GDK_Down)
 // #define HOTKEY_TOGGLE_TABBAR         CTRL(GDK_Up)
