@@ -1,6 +1,7 @@
 UNRELEASED
  * New COLOR_STYLE option: SOLARIZED_DARK and SOLARIZED_LIGHT, closes #8.
  * Fix COLOR_STYLE data according to xterm-279 and linux console in qemu
+ * Workaround for Caps lock problem by changing hotkey settings, issue #7.
 
 0.5.1
  * Better compatibility with some compilers and CFLAGS
